# MIDiWay

./: .gitignore  README.md  build.sh  ui-design.drawio
Code/: CMakeLists.txt  mingw-w64-toolchain.cmake
Code/src/: CMakeLists.txt  gui.c  gui.h  gui_displays.c  gui_main.c  gui_main.h  gui_main.ui  main.c
